# doc/openapi.yaml
@@ -515,16 +515,16 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /unit/create_and_link_user:
+    /unit/create:
         post:
             tags:
                 - Unit
-            operationId: Unit_UnitCreateAndLinkUser
+            operationId: Unit_CreateUnit
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/UnitCreateAndLinkUserReq'
+                            $ref: '#/components/schemas/CreateUnitReq'
                 required: true
             responses:
                 "200":
@@ -532,7 +532,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/UnitCreateAndLinkUserResp'
+                                $ref: '#/components/schemas/Response'
                 default:
                     description: Default error response
                     content:
@@ -586,30 +586,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /unit/link_user:
-        post:
-            tags:
-                - Unit
-            operationId: Unit_UnitLinkUser
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/UnitLinkUserReq'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Response'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
     /unit/update_info:
         post:
             tags:
@@ -634,16 +610,16 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /user/admin/sign_in:
+    /user/create:
         post:
             tags:
                 - User
-            operationId: User_AdminSignIn
+            operationId: User_CreateUser
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/AdminSignInReq'
+                            $ref: '#/components/schemas/CreateUserReq'
                 required: true
             responses:
                 "200":
@@ -651,7 +627,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/UserSignInResp'
+                                $ref: '#/components/schemas/Response'
                 default:
                     description: Default error response
                     content:
@@ -681,6 +657,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /user/send_verify_code:
+        post:
+            tags:
+                - User
+            operationId: User_SendVerifyCode
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/SendVerifyCodeReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Response'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /user/sign_in:
         post:
             tags:
@@ -691,30 +691,6 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/UserSignInReq'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/UserSignInResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /user/student/sign_in:
-        post:
-            tags:
-                - User
-            operationId: User_StudentSignIn
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/StudentSignInReq'
                 required: true
             responses:
                 "200":
@@ -779,18 +755,6 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        AdminSignInReq:
-            type: object
-            properties:
-                authType:
-                    type: integer
-                    format: int32
-                account:
-                    type: string
-                verifyCode:
-                    type: string
-                unitId:
-                    type: string
         AlarmRecord:
             type: object
             properties:
@@ -977,6 +941,59 @@ components:
                     format: int32
                 msg:
                     type: string
+        CreateUnitReq:
+            type: object
+            properties:
+                unit:
+                    $ref: '#/components/schemas/UnitVO'
+        CreateUserReq:
+            type: object
+            properties:
+                unitId:
+                    type: string
+                password:
+                    type: string
+                    description: 明文密码
+                email:
+                    type: string
+                phone:
+                    type: string
+                code:
+                    type: string
+                codeType:
+                    type: integer
+                    format: int32
+                name:
+                    type: string
+                birth:
+                    type: string
+                gender:
+                    type: integer
+                    format: int32
+                enrollYear:
+                    type: integer
+                    description: 入学年份，用于计算年级
+                    format: int32
+                grade:
+                    type: integer
+                    description: 年级 enrollYear非空时以enrollYear为准计算年级
+                    format: int32
+                class:
+                    type: integer
+                    format: int32
+                role:
+                    type: integer
+                    format: int32
+                status:
+                    type: integer
+                    format: int32
+                createTime:
+                    type: string
+                updateTime:
+                    type: string
+                deleteTime:
+                    type: string
+            description: 创建用户 email/phone/code至少传入一个
         DashboardCreateRemarkReq:
             type: object
             properties:
@@ -1593,6 +1610,15 @@ components:
                     type: array
                     items:
                         type: string
+        SendVerifyCodeReq:
+            type: object
+            properties:
+                authType:
+                    type: string
+                    description: 认证类型 "email" | "phone"
+                authId:
+                    type: string
+                    description: 邮箱地址 | 手机号
         Status:
             type: object
             properties:
@@ -1609,18 +1635,6 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        StudentSignInReq:
-            type: object
-            properties:
-                authType:
-                    type: integer
-                    format: int32
-                code:
-                    type: string
-                verifyCode:
-                    type: string
-                unitId:
-                    type: string
         TTSApp:
             type: object
             properties:
@@ -1675,30 +1689,6 @@ components:
                 deleteTime:
                     type: string
             description: Unit
-        UnitCreateAndLinkUserReq:
-            type: object
-            properties:
-                unitId:
-                    type: string
-                codeType:
-                    type: string
-                users:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/User'
-            description: 创建并关联用户
-        UnitCreateAndLinkUserResp:
-            type: object
-            properties:
-                allCount:
-                    type: integer
-                    format: int32
-                successCount:
-                    type: integer
-                    format: int32
-                skipCount:
-                    type: integer
-                    format: int32
         UnitGetByURIReq:
             type: object
             properties:
@@ -1719,14 +1709,6 @@ components:
             properties:
                 unit:
                     $ref: '#/components/schemas/Unit'
-        UnitLinkUserReq:
-            type: object
-            properties:
-                unitId:
-                    type: string
-                userId:
-                    type: string
-            description: 关联用户
         UnitUpdateInfoReq:
             type: object
             properties:
@@ -1756,6 +1738,8 @@ components:
                 updateTime:
                     type: string
                 deleteTime:
+                    type: string
+                uri:
                     type: string
         User:
             type: object
@@ -1863,8 +1847,6 @@ components:
                     description: '1-2: Phone | StudentID'
                     format: int32
                 code:
-                    type: string
-                password:
                     type: string
                 unitId:
                     type: string
